# autozen-payment-service-repo

./: .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 0dbbaa42710b_.py  4339be4308e9_setting_up_models_for_payment_.py
src/: main.py
src/application/: exceptions.py
src/application/interfaces/: message_queue_interface.py  payment_gateway_interface.py
src/application/services/: payment_service.py
src/application/use_cases/: add_bank_account.py  add_bank_card.py
src/core/: config.py  dependencies.py  exceptions.py  logger.py
src/core/middleware/: clients_filter_middleware.py  exceptions_middleware.py
src/domain/: exceptions.py  schemas.py
src/domain/interfaces/: company_service_adapter_interface.py  message_queue_interface.py  payment_gateway_interface.py  user_service_adapter_interface.py
src/domain/interfaces/repositories_interfaces/: bank_account_repository_interface.py  bank_card_repository_interface.py
src/domain/models/: company_responses.py  payment_methods.py  user_responses.py
src/infrastructure/: exceptions.py
src/infrastructure/adapters/: bank_payment_gateway.py  company_service_adapter.py  rabbitmq_api_gateway_listener.py  user_service_adapter.py
src/infrastructure/dao/: bank_account_dao.py  bank_card_dao.py
src/infrastructure/database/: database.py  models.py
src/infrastructure/interfaces/: queue_listener_interface.py
src/infrastructure/repositories/: bank_account_repository.py  bank_card_repository.py
src/presentation/: schemas.py
src/presentation/api/v1/: payment_routes.py
