[project]
name = "autozen-payment-service-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Ruzhilov",email = "iruzhilov@gmail.com"}
]
license = {text = "Apache Liscense 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
